fixed main ui visibility

--- a/style.css
+++ b/style.css
@@ -1079,3 +1079,7 @@ transform:scale(1);
 }
 
 }
+
+.main-ui{
+display:flex;
+}
